--- a/app/templates/page_4_DashboardPage.html
+++ b/app/templates/page_4_DashboardPage.html
@@ -4,7 +4,8 @@
 
 <div class="container">
     <div class="text-center">
-        <h1 class="title-purple-text mt-5">Welcome back, {{ session['first_name'] }}!</h1>
+        <h5 class="title-purple-text mt-5" style="font-size: 24px;">Welcome back, {{ session['first_name'] }}!</h5>
+
     </div>
 </div>
 
