changed the navigation bar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -153,9 +153,7 @@
                         <li class="nav-item"><a href="{{ url_for('main.dashboard') }}"
                                                 class="nav-item1 {% if request.endpoint == 'main.dashboard' %}active-link{% endif %}">Home</a></li>
                         <li class="nav-item"><a href="{{ url_for('main.appointment_manager') }}"
-                                                class="nav-item1 {% if request.endpoint == 'main.appointment_manager' %}active-link{% endif %}">Appointment</a></li>
-                        <li class="nav-item"><a href="{{ url_for('main.calendar') }}"
-                                                class="nav-item1 {% if request.endpoint == 'main.calendar' %}active-link{% endif %}">Calendar</a></li>
+                                                class="nav-item1 {% if request.endpoint == 'main.appointment_manager' %}active-link{% endif %}">Search</a></li>
                         <li class="nav-item"><a href="{{ url_for('main.medical_document') }}"
                                                 class="nav-item1 {% if request.endpoint == 'main.medical_document' %}active-link{% endif %}">Documents</a></li>
                         <li class="nav-item"><a href="{{ url_for('main.insights') }}"
