--- a/app/templates/page_8_MedicalDocumentsManagerPage.html
+++ b/app/templates/page_8_MedicalDocumentsManagerPage.html
@@ -11,6 +11,11 @@
                 + Upload a New Document
             </a>
         </div>
+        <div class="d-flex justify-content-center gap-3 mt-3">
+            <a class="btn btn-purple-calender shadow-sm fw-bold px-4 py-2">
+                Share Documents
+            </a>
+        </div>
     </div>
 
     <form method="GET" class="d-flex flex-wrap align-items-end gap-3 mb-3">
