Added colours to verification status

--- a/app/templates/page_8_MedicalDocumentsManagerPage.html
+++ b/app/templates/page_8_MedicalDocumentsManagerPage.html
@@ -109,9 +109,9 @@
 
                         <a class="btn verification">
                             {% if doc.verification %}
-                            Verified
+                            <span style="color:MediumSeaGreen">Verified</span>
                             {% else %}
-                            Not Verified
+                            <span style="color:tomato">Not Verified</span>
                             {% endif %}
                         </a>
                     </td>
