--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -196,8 +196,8 @@
 
         <!-- ===== Footer ===== -->
         <div class="footer">
-            <p>&copy; Copyright 2025. <span id='footer-name'>Chronic Care</span></p>
-            <p>Connect on <a href="#" class="footer-link">LinkedIn</a> | <a href="#" class="footer-link">Github</a></p>
+            <p>&copy; Copyright 2025. <span id='footer-name'>Home Swipe</span></p>
+            <p>CyberCapital </p>
         </div>
 
     </div>
