Finally figured out how to change the image width

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -234,9 +234,11 @@ h1.action-h1 {
   padding: 30px 0; /**topbot rightleft**/
 }
 
-.featured .col-md-6 .featured-img {
-  height: 300px;
-  width: auto;
+.featured .col-md-9 .featured-img {
+  margin-bottom: 24px;
+  height: auto;
+  width: 100%;
+  max-width: 100%;
 }
 
 .featured-desc {
