--- a/app/templates/page_4_DashboardPage.html
+++ b/app/templates/page_4_DashboardPage.html
@@ -104,13 +104,13 @@
             <!-- Slide 1: Football Club Featured -->
             <div class="swiper-slide">
                 <div class="row align-items-center">
-                    <div class="col-md-6 d-flex justify-content-center">
+                    <div class="col-md-9 d-flex justify-content-center">
                         <img src="{{url_for('static',filename='images/apartment1.png')}}"
                             class="img-fluid featured-img" alt="An apartment with a balcony">
                     </div>
                     <div class="col-md-6 featured-col text-col">
                         <div class="text-wrapper">
-                            <h3 class="featured-title">3 bedroom 2 bathroom Apartment</h3>
+                            <h3 class="featured-title">3 Bed 2 Bath Apartment</h3>
                             <p class="featured-desc">Located in the middle of the city, enjoy the benefits of a prime location without compromising on your quality of life.</p>
                             <a href="{{ url_for('main.add_appointment') }}" class="btn">Book a viewing now!
                                 &#8594;</a>
@@ -122,7 +122,7 @@
             <!-- Example additional slide -->
             <div class="swiper-slide">
                 <div class="row align-items-center">
-                    <div class="col-md-6 d-flex justify-content-center">
+                    <div class="col-md-9 d-flex justify-content-center">
                         <img src="{{url_for('static',filename='images/cardiologist.png')}}"
                             class="img-fluid featured-img" alt="Martial Art">
                     </div>
@@ -139,7 +139,7 @@
 
             <div class="swiper-slide">
                 <div class="row align-items-center">
-                    <div class="col-md-6 d-flex justify-content-center">
+                    <div class="col-md-9 d-flex justify-content-center">
                         <img src="{{url_for('static',filename='images/neurologist.png')}}"
                             class="img-fluid featured-img" alt="Computing">
                     </div>
