Removed cancer and attempted murder

--- a/app/templates/page_4_DashboardPage.html
+++ b/app/templates/page_4_DashboardPage.html
@@ -123,13 +123,13 @@
             <div class="swiper-slide">
                 <div class="row align-items-center">
                     <div class="col-md-9 d-flex justify-content-center">
-                        <img src="{{url_for('static',filename='images/cardiologist.png')}}"
-                            class="img-fluid featured-img" alt="Martial Art">
+                        <img src="{{url_for('static',filename='images/house.png')}}"
+                            class="img-fluid featured-img" alt="A nicely decorated living room">
                     </div>
                     <div class="col-md-6 featured-col text-col">
                         <div class="text-wrapper">
-                            <h3 class="featured-title">No more fighting for properties!</h3>
-                            <p class="featured-desc">This doctor is wrestling an old man for his home!</p>
+                            <h3 class="featured-title">2 Bed 1 Bath</h3>
+                            <p class="featured-desc">Live in comfort in your preferred suburb</p>
                             <a href="{{ url_for('main.add_appointment') }}" class="btn">Book a viewing now!
                                 &#8594;</a>
                         </div>
@@ -140,13 +140,13 @@
             <div class="swiper-slide">
                 <div class="row align-items-center">
                     <div class="col-md-9 d-flex justify-content-center">
-                        <img src="{{url_for('static',filename='images/neurologist.png')}}"
-                            class="img-fluid featured-img" alt="Computing">
+                        <img src="{{url_for('static',filename='images/room.png')}}"
+                            class="img-fluid featured-img" alt="An empty room">
                     </div>
                     <div class="col-md-6 featured-col text-col">
                         <div class="text-wrapper">
-                            <h3 class="featured-title">Avoid brain cancer</h3>
-                            <p class="featured-desc">This doctor is showing his patient the tumor that had grown due to excessive renter stress</p>
+                            <h3 class="featured-title">1 Bed 1 Bath</h3>
+                            <p class="featured-desc">Have a new beginning with a blank slate</p>
                             <a href="{{ url_for('main.add_appointment') }}" class="btn">Book a viewing now!
                                 &#8594;</a>
                         </div>
