Changed logo. Added square logo in case needed in the future

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -140,7 +140,7 @@
             <div class="container-fluid px-2">
                 <a class="navbar-brand"
                    href="{% if session.role == 'member' %}{{ url_for('main.dashboard') }}{% else %}{{ url_for('main.index') }}{% endif %}">
-                    <img class="logo" src="{{ url_for('static', filename='images/chronic-care-title.png') }}" alt="logo"
+                    <img class="logo" src="{{ url_for('static', filename='images/banner_logo.png') }}" alt="logo"
                          style="max-height:40px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myList"
