--- a/app/templates/page_5_AppointmentsManagerPage.html
+++ b/app/templates/page_5_AppointmentsManagerPage.html
@@ -37,7 +37,7 @@
 <!-- AI Suburbs / Results -->
 <div class="container mt-5">
     {% if ai_suburbs %}
-    <h4 class="mb-3">Suggested Suburbs</h4>
+    <h4 class="title-purple-text text-center mb-3">Suggested Suburbs</h4>
     <ul class="list-group">
         {% for suburb in ai_suburbs %}
         <li class="list-group-item">
